# libldcauc

./: .gitignore  CMakeLists.txt  README.md
cmake/: LdcaucConfig.cmake  LdcaucConfig.cmake.in
config/: ldacs_config_as_1.yaml  ldacs_config_as_2.yaml  ldacs_config_gs.yaml  ldacs_config_gs_1.yaml  ldacs_config_gs_2.yaml  ldacs_config_sgw.yaml
include/: gs_conn.h  gsc_conn.h  inside.h  ldcauc.h  snf.h  snp_sub.h
include/crypto/: authc.h  cipher.h  key.h  secure_core.h
include/net/: connection.h  gs_conn.h  net.h  net_core.h  net_epoll.h
src/: CMakeLists.txt  rootkey_export.c  snf.c  snp_sub.c
src/crypto/: auth.c  cipher.c  key.c  secure_define.c
src/net/: connection.c  gs_conn.c  net.c  net_epoll.c
src/snf/: gs_conn.c  gsc_conn.c  gsnf.c  snf.c  snf_define.c  ss.c
tests/: CMakeLists.txt  snf_test.c  snpsub_test.c
